sort.pancake.GatesPancake.scala.error
Compilation error:
GatesPancake:9: error: not found: value plus1
    print(plus1)
          ^